# gitLLM

./: .env-example  .gitignore  README.md  pyproject.toml
docs/: PRD.md  backend-architecture.md  chat&memory_branch功能预演.md  checkpoint-infra-setup.md  checkpoints-design.md  cursor-pagination-guide.md  database-design.md  database-infrastructure-guide.md  infrastructure-setup-guide.md  memory-branch-api-guide.md  memory-branch-api-response-design.md  memory-branch-implementation-guide.md  session-list-api-guide.md  stream-cancel-and-error-handling.md  stream-chat.md
scripts/: debug_api_key.py  dev.ps1  dev.sh  init_db.py  reset_db_on_schema_mismatch.py
scripts/db/: init_db.py
scripts/dev/: dev.ps1  dev.sh
src/: main.py
src/api/: deps.py  error_handlers.py  utils.py
src/api/schemas/: base.py  chat.py  chat_sessions.py  merges.py  messages.py  sessions.py  threads.py
src/api/v1/: model_configs.py  router.py  sessions.py  settings.py
src/app/policies/: suggestion_policy.py
src/app/services/: chat_service.py  chat_session_service.py  checkpoint_service.py  merge_service.py  message_service.py  session_title_service.py  thread_service.py
src/core/: config.py  exceptions.py  logging.py
src/core/config/: __init__.py  checkpoint_config.py  context_compaction_config.py  db_config.py  model_config.py
src/domain/: enums.py  models.py
src/gitllm/: main.py
src/gitllm/api/: deps.py
src/gitllm/core/: logging.py  security.py
src/gitllm/graph/: state.py
src/graph/: state.py
src/llm/: __init__.py  factory.py  prompt_loader.py  provider.py
(+60 files in other folders)
